--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 
 # set font
-font pango:System San Francisco Display 10
+# font pango:System San Francisco Display 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -82,8 +82,6 @@ bindsym $mod+5 workspace $workspace5
 bindsym $mod+6 workspace $workspace6
 bindsym $mod+7 workspace $workspace7
 bindsym $mod+8 workspace $workspace8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $workspace1
@@ -94,8 +92,6 @@ bindsym $mod+Shift+5 move container to workspace $workspace5
 bindsym $mod+Shift+6 move container to workspace $workspace6
 bindsym $mod+Shift+7 move container to workspace $workspace7
 bindsym $mod+Shift+8 move container to workspace $workspace8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
 
 for_window [class="Spotify"] move to workspace $workspace8
 
@@ -147,12 +143,6 @@ set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
 
-# window colors
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent $urgent-bg-color $urgent-bg-color $text-color #00ff00
 
 hide_edge_borders both
 
@@ -178,7 +168,7 @@ bindsym $mod+Shift+x exec i3lock --color "$bg-color"
 bindsym $mod+p exec spotify
 
 # set wallpaper
-exec_always feh --bg-scale /home/yodko/Pictures/10-14-Mojave-12.jpg
+exec_always feh --bg-scale /home/george/Pictures/10-14-Mojave-7.jpg
 
 # set multiple screen orientation
 exec_always xrandr --output DisplayPort-0 --primary --mode 1920x1080 --pos 1080x696 --rotate normal --output DVI-1 --off --output DVI-0 --off --output HDMI-0 --mode 1920x1080 --pos 0x0 --rotate right
@@ -186,6 +176,33 @@ exec_always xrandr --output DisplayPort-0 --primary --mode 1920x1080 --pos 1080x
 # disable title bar
 for_window [class=".*"] border pixel 0
 
+# smart gaps
+smart_gaps on
+
+# toggle i3status bar
+bindsym $mod+m bar mode toggle
+
+# Set shut down, restart and locking features
+bindsym $mod+0 mode "$mode_system"
+set $mode_system (l)ock, (e)xit, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id i3exit lock, mode "default"
+    bindsym s exec --no-startup-id i3exit suspend, mode "default"
+    bindsym e exec --no-startup-id i3exit logout, mode "default"
+    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id i3exit reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+
+    # exit system mode: "Enter" or "Escape"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+# picom
+exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
+
+# toggle split
+bindsym $mod+q split toggle
 
 #############################
 ### settings for i3-gaps: ###
